[package]
name = "achtung-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
backtrace = "0.3"
crossterm = { version = "0.25.0", features = ["event-stream"]}
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["full"]}
tui = "0.19.0"